fixing relative spacing in css

--- a/valuni_wd/src/App.css
+++ b/valuni_wd/src/App.css
@@ -2,6 +2,8 @@
 @import url('./ConstColors.css');
 
 body { 
-  background-color: var(--light-2);
+  background-color: var(--light-2); 
+  min-height: 100vh; 
+  min-width: 100vw;
 }
 
